# avaliacao-entrevista-candidatos-ti

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_env.py
.github/workflows/: ci.yml
Trash/: README.md
app/: __init__.py  main.py
app/api/: main.py
app/core/: config.py  cto_heuristic.py  dimensions.py  evidence_validation.py  exceptions.py  pipeline_contract.py  pipeline_events.py  protocols.py  technical_kb_loader.py  technical_questions_format.py
app/db/: models.py  session.py
app/models/: executive_report.py  schemas.py  scorecard_models.py
app/pipeline/: orchestrator.py
app/services/: answer_evaluation_service.py  assistants_evaluation_pdf.py  confidence_scoring.py  correlation_service.py  evaluator_bias.py  executive_report_service.py  golden_dataset.py  history_service.py  linkedin_service.py  llm_service.py  parsing_service.py  pipeline_ui_messages.py  question_bank.py  ranking_service.py  report_generator.py  scorecard_service.py  scorecard_store.py
app/utils/: file_locator.py
data/golden_dataset/: golden_answers.json
data/question_bank/: sample_questions.json
data/technical-questions/: README.md  agile_coach.md  ai_engineer.md  assistant_evaluation.md  backend.md  data_engineer.md  data_scientist.md  devops.md  devsecops.md  frontend.md  fullstack.md  product_owner.md  qa.md  requirements_analyst.md  scrum_master.md  software_engineer.md  solution_architect.md  systems_architect.md  ux_ui.md
docs/: AI_CANDIDATE_EVALUATION.md  ROADMAP_INOVACAO.md  board_arquitetura.md
prompts/: executive_report.md
tests/: test_cto_heuristic.py  test_pipeline.py  test_scorecard_api.py
(+49 files in other folders)
